Fixed minor issue with Update/Upgrade Activity displaying briefly prior to login screen when no updates/upgrades are needed